fix color contrast error

--- a/css/globals.css
+++ b/css/globals.css
@@ -5,7 +5,7 @@
   --burnt-orange: #7d4f3b;
 
   --pink: #E83F6F; 
-  --blue: #2274A5; 
+  --blue: #003A9E; 
   --yellow: #FFBF00;
   --green: #32936F;
 
